Implementation of web server and grpc server starting point
