# generated/types/types.pb.go
@@ -164,77 +164,6 @@ func (x *ID) GetId() string {
 	return ""
 }
 
-type Basic struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	Id        *ID        `protobuf:"bytes,1,opt,name=id,proto3" json:"id" gorm:"primary_key"`
-	UpdatedAt *Timestamp `protobuf:"bytes,2,opt,name=updated_at,json=updatedAt,proto3" json:"updated_at" gorm:"index; type:timestamptz; autoCreateTime"`
-	CreatedAt *Timestamp `protobuf:"bytes,3,opt,name=created_at,json=createdAt,proto3" json:"created_at" gorm:"index; type:timestamptz; autoUpdateTime"`
-	DeletedAt *DeletedAt `protobuf:"bytes,4,opt,name=deleted_at,json=deletedAt,proto3" json:"deleted_at" gorm:"index; type:timestamptz"`
-}
-
-func (x *Basic) Reset() {
-	*x = Basic{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_types_types_proto_msgTypes[3]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *Basic) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*Basic) ProtoMessage() {}
-
-func (x *Basic) ProtoReflect() protoreflect.Message {
-	mi := &file_types_types_proto_msgTypes[3]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use Basic.ProtoReflect.Descriptor instead.
-func (*Basic) Descriptor() ([]byte, []int) {
-	return file_types_types_proto_rawDescGZIP(), []int{3}
-}
-
-func (x *Basic) GetId() *ID {
-	if x != nil {
-		return x.Id
-	}
-	return nil
-}
-
-func (x *Basic) GetUpdatedAt() *Timestamp {
-	if x != nil {
-		return x.UpdatedAt
-	}
-	return nil
-}
-
-func (x *Basic) GetCreatedAt() *Timestamp {
-	if x != nil {
-		return x.CreatedAt
-	}
-	return nil
-}
-
-func (x *Basic) GetDeletedAt() *DeletedAt {
-	if x != nil {
-		return x.DeletedAt
-	}
-	return nil
-}
-
 type IDList struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
@@ -246,7 +175,7 @@ type IDList struct {
 func (x *IDList) Reset() {
 	*x = IDList{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_types_types_proto_msgTypes[4]
+		mi := &file_types_types_proto_msgTypes[3]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -259,7 +188,7 @@ func (x *IDList) String() string {
 func (*IDList) ProtoMessage() {}
 
 func (x *IDList) ProtoReflect() protoreflect.Message {
-	mi := &file_types_types_proto_msgTypes[4]
+	mi := &file_types_types_proto_msgTypes[3]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -272,7 +201,7 @@ func (x *IDList) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use IDList.ProtoReflect.Descriptor instead.
 func (*IDList) Descriptor() ([]byte, []int) {
-	return file_types_types_proto_rawDescGZIP(), []int{4}
+	return file_types_types_proto_rawDescGZIP(), []int{3}
 }
 
 func (x *IDList) GetIds() []*ID {
@@ -294,7 +223,7 @@ type Pagination struct {
 func (x *Pagination) Reset() {
 	*x = Pagination{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_types_types_proto_msgTypes[5]
+		mi := &file_types_types_proto_msgTypes[4]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -307,7 +236,7 @@ func (x *Pagination) String() string {
 func (*Pagination) ProtoMessage() {}
 
 func (x *Pagination) ProtoReflect() protoreflect.Message {
-	mi := &file_types_types_proto_msgTypes[5]
+	mi := &file_types_types_proto_msgTypes[4]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -320,7 +249,7 @@ func (x *Pagination) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use Pagination.ProtoReflect.Descriptor instead.
 func (*Pagination) Descriptor() ([]byte, []int) {
-	return file_types_types_proto_rawDescGZIP(), []int{5}
+	return file_types_types_proto_rawDescGZIP(), []int{4}
 }
 
 func (x *Pagination) GetLimit() int32 {
@@ -357,33 +286,7 @@ var file_types_types_proto_rawDesc = []byte{
 	0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65,
 	0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x09, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70,
 	0x22, 0x14, 0x0a, 0x02, 0x49, 0x44, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x22, 0x9d, 0x03, 0x0a, 0x05, 0x42, 0x61, 0x73, 0x69, 0x63,
-	0x12, 0x3c, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x09, 0x2e, 0x74,
-	0x79, 0x70, 0x65, 0x73, 0x2e, 0x49, 0x44, 0x42, 0x21, 0x9a, 0x84, 0x9e, 0x03, 0x1c, 0x6a, 0x73,
-	0x6f, 0x6e, 0x3a, 0x22, 0x69, 0x64, 0x22, 0x20, 0x67, 0x6f, 0x72, 0x6d, 0x3a, 0x22, 0x70, 0x72,
-	0x69, 0x6d, 0x61, 0x72, 0x79, 0x5f, 0x6b, 0x65, 0x79, 0x22, 0x52, 0x02, 0x69, 0x64, 0x12, 0x76,
-	0x0a, 0x0a, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x64, 0x5f, 0x61, 0x74, 0x18, 0x02, 0x20, 0x01,
-	0x28, 0x0b, 0x32, 0x10, 0x2e, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73,
-	0x74, 0x61, 0x6d, 0x70, 0x42, 0x45, 0x9a, 0x84, 0x9e, 0x03, 0x40, 0x6a, 0x73, 0x6f, 0x6e, 0x3a,
-	0x22, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x64, 0x5f, 0x61, 0x74, 0x22, 0x20, 0x67, 0x6f, 0x72,
-	0x6d, 0x3a, 0x22, 0x69, 0x6e, 0x64, 0x65, 0x78, 0x3b, 0x20, 0x74, 0x79, 0x70, 0x65, 0x3a, 0x74,
-	0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x74, 0x7a, 0x3b, 0x20, 0x61, 0x75, 0x74, 0x6f,
-	0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x54, 0x69, 0x6d, 0x65, 0x22, 0x52, 0x09, 0x75, 0x70, 0x64,
-	0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x76, 0x0a, 0x0a, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65,
-	0x64, 0x5f, 0x61, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x10, 0x2e, 0x74, 0x79, 0x70,
-	0x65, 0x73, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x42, 0x45, 0x9a, 0x84,
-	0x9e, 0x03, 0x40, 0x6a, 0x73, 0x6f, 0x6e, 0x3a, 0x22, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64,
-	0x5f, 0x61, 0x74, 0x22, 0x20, 0x67, 0x6f, 0x72, 0x6d, 0x3a, 0x22, 0x69, 0x6e, 0x64, 0x65, 0x78,
-	0x3b, 0x20, 0x74, 0x79, 0x70, 0x65, 0x3a, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70,
-	0x74, 0x7a, 0x3b, 0x20, 0x61, 0x75, 0x74, 0x6f, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x54, 0x69,
-	0x6d, 0x65, 0x22, 0x52, 0x09, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x66,
-	0x0a, 0x0a, 0x64, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x64, 0x5f, 0x61, 0x74, 0x18, 0x04, 0x20, 0x01,
-	0x28, 0x0b, 0x32, 0x10, 0x2e, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2e, 0x44, 0x65, 0x6c, 0x65, 0x74,
-	0x65, 0x64, 0x41, 0x74, 0x42, 0x35, 0x9a, 0x84, 0x9e, 0x03, 0x30, 0x6a, 0x73, 0x6f, 0x6e, 0x3a,
-	0x22, 0x64, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x64, 0x5f, 0x61, 0x74, 0x22, 0x20, 0x67, 0x6f, 0x72,
-	0x6d, 0x3a, 0x22, 0x69, 0x6e, 0x64, 0x65, 0x78, 0x3b, 0x20, 0x74, 0x79, 0x70, 0x65, 0x3a, 0x74,
-	0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x74, 0x7a, 0x22, 0x52, 0x09, 0x64, 0x65, 0x6c,
-	0x65, 0x74, 0x65, 0x64, 0x41, 0x74, 0x22, 0x25, 0x0a, 0x06, 0x49, 0x44, 0x4c, 0x69, 0x73, 0x74,
+	0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x22, 0x25, 0x0a, 0x06, 0x49, 0x44, 0x4c, 0x69, 0x73, 0x74,
 	0x12, 0x1b, 0x0a, 0x03, 0x69, 0x64, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x09, 0x2e,
 	0x74, 0x79, 0x70, 0x65, 0x73, 0x2e, 0x49, 0x44, 0x52, 0x03, 0x69, 0x64, 0x73, 0x22, 0x3a, 0x0a,
 	0x0a, 0x50, 0x61, 0x67, 0x69, 0x6e, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x12, 0x14, 0x0a, 0x05, 0x6c,
@@ -408,29 +311,24 @@ func file_types_types_proto_rawDescGZIP() []byte {
 	return file_types_types_proto_rawDescData
 }
 
-var file_types_types_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_types_types_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
 var file_types_types_proto_goTypes = []interface{}{
 	(*Timestamp)(nil),             // 0: types.Timestamp
 	(*DeletedAt)(nil),             // 1: types.DeletedAt
 	(*ID)(nil),                    // 2: types.ID
-	(*Basic)(nil),                 // 3: types.Basic
-	(*IDList)(nil),                // 4: types.IDList
-	(*Pagination)(nil),            // 5: types.Pagination
-	(*timestamppb.Timestamp)(nil), // 6: google.protobuf.Timestamp
+	(*IDList)(nil),                // 3: types.IDList
+	(*Pagination)(nil),            // 4: types.Pagination
+	(*timestamppb.Timestamp)(nil), // 5: google.protobuf.Timestamp
 }
 var file_types_types_proto_depIdxs = []int32{
-	6, // 0: types.Timestamp.timestamp:type_name -> google.protobuf.Timestamp
-	6, // 1: types.DeletedAt.timestamp:type_name -> google.protobuf.Timestamp
-	2, // 2: types.Basic.id:type_name -> types.ID
-	0, // 3: types.Basic.updated_at:type_name -> types.Timestamp
-	0, // 4: types.Basic.created_at:type_name -> types.Timestamp
-	1, // 5: types.Basic.deleted_at:type_name -> types.DeletedAt
-	2, // 6: types.IDList.ids:type_name -> types.ID
-	7, // [7:7] is the sub-list for method output_type
-	7, // [7:7] is the sub-list for method input_type
-	7, // [7:7] is the sub-list for extension type_name
-	7, // [7:7] is the sub-list for extension extendee
-	0, // [0:7] is the sub-list for field type_name
+	5, // 0: types.Timestamp.timestamp:type_name -> google.protobuf.Timestamp
+	5, // 1: types.DeletedAt.timestamp:type_name -> google.protobuf.Timestamp
+	2, // 2: types.IDList.ids:type_name -> types.ID
+	3, // [3:3] is the sub-list for method output_type
+	3, // [3:3] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
 }
 
 func init() { file_types_types_proto_init() }
@@ -476,18 +374,6 @@ func file_types_types_proto_init() {
 			}
 		}
 		file_types_types_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*Basic); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
-		file_types_types_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*IDList); i {
 			case 0:
 				return &v.state
@@ -499,7 +385,7 @@ func file_types_types_proto_init() {
 				return nil
 			}
 		}
-		file_types_types_proto_msgTypes[5].Exporter = func(v interface{}, i int) interface{} {
+		file_types_types_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*Pagination); i {
 			case 0:
 				return &v.state
@@ -518,7 +404,7 @@ func file_types_types_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_types_types_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   6,
+			NumMessages:   5,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
